inheritance/inheritance180_output.txt
inheritance$ g++ inheritance180.cpp 
inheritance180.cpp: In function ‘int main()’:
inheritance180.cpp:49:6: error: could not convert ‘b’ from ‘A’ to ‘Shape’
   49 |   f1(b);
      |      ^
      |      |
      |      A
inheritance$ 
